# HTTP-Proxy-Service-BLE

./: Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml
src/: app_state.rs  config.rs  constants.rs  error.rs  http_handler.rs  lib.rs  main.rs
src/bluetooth/: advertisement.rs  application.rs  characteristics.rs  mod.rs
src/bluetooth/characteristics/: headers_body_chunk_idx.rs  headers_body_mtu_sizes.rs  http_control_point.rs  http_entity_body.rs  http_headers.rs  http_status_code.rs  http_uri.rs  https_security.rs  mod.rs
src/http/: handler.rs
src/utils/: bluetooth.rs  mod.rs  signals.rs
