[package]
name = "http-proxy-service-ble"
version = "0.1.0"
edition = "2021"
authors = ["Alessio Munerato"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.17.3", features = ["full"] }
byteorder = "1.5.0"
clap = "4.5.13"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
substring = "1.4.5"
tokio = { version = "1.39.2", features = ["full"] }
uuid = "1.10.0"
