[package]
name = "hps-ble"
version = "1.0.0"
edition = "2024"
authors = ["Alessio Munerato"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.17.3", features = ["full"] }
byteorder = "1.5.0"
clap = { version = "4.5.13", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["json"] }
substring = "1.4.5"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.10.0"
